# cosmos

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
colony-chain/: Cargo.toml
colony-chain/src/: lib.rs  main.rs
contracts/light-client/: Cargo.toml
contracts/light-client/examples/: schema.rs
contracts/light-client/src/: contract.rs  msg.rs  state.rs
contracts/simple-counter/: Cargo.toml  README.md
contracts/simple-counter/schema/: count_response.json  instantiate_msg.json  query_msg.json
contracts/simple-counter/src/: state.rs
contracts/test-light-client-cross/: Cargo.toml
contracts/test-light-client-cross/src/: contract.rs  error.rs  msg.rs
contracts/test-treasury-cross/examples/: schema.rs
contracts/test-treasury-cross/src/: contract.rs  error.rs  helpers.rs  integration_tests.rs  msg.rs
contracts/treasury/: Cargo.toml  contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/treasury-nft/: contract_tests.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/treasury/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/treasuy/src/: contract.rs  error.rs  msg.rs
interact/: Cargo.toml  test_config_example.json
interact/src/: deploy.rs  execute.rs  lib.rs  query.rs  utils.rs
interact/src/deploy-contract/: main.rs
interact/tests/: suite1.rs
script/: malaga_faucet.sh  uni_faucet.sh
simple-counter/: Cargo.toml
simple-counter/examples/: schema.rs
simple-counter/schema/: auth_response.json  execute_msg.json  state.json
simple-counter/src/: contract.rs  helpers.rs  integration_tests.rs  lib.rs  msg.rs  state.rs
treasury/: contract.rs  error.rs
