[package]
name = "pdao-cosmos-colony-chain"
version = "0.0.0"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.56"
blake3 = "1.3.1"
tokio = { version = "1.0", features = ["full"] }
rust_decimal = "1.25.0"
rust_decimal_macros = "1.25.0"
pdao-colony-common = { version = "0.0.0" }
pdao-colony-contract-common = { version = "0.0.0" }
pdao-cosmos-interact = { path = "../interact"}
serde-tc = "0.3.3"
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
cosmwasm-std = "1.0.0"
