[package]
name = "pdao-cosmos-interact"
version = "0.0.1"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = '2021'
include = ["src/**/*", "Cargo.toml"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/postech-dao/cosmos"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = "0.7.6"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
cosmrs = { version = "0.7.0", features = ["rpc", "cosmwasm"] }
hex = "0.4.3"
